--- a/package.json
+++ b/package.json
@@ -2,27 +2,26 @@
   "name": "default-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://poisork.github.io/swapi",
   "dependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
-    "i18next": "^17.0.18",
-    "i18next-browser-languagedetector": "^3.1.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-i18next": "^10.13.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "@types/react-router-dom": "^4.3.5"
   }
 }
