--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SW",
+  "name": "swAPI",
+  "description": "Мои заметки по оптимизации сайта",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "512x512 256x256 192x192 64x64 48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
-  ],
-  "start_url": ".",
+  ], 
+  "use_url": "localhost",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#a2de66",
+  "background_color": "#faab19"
 }
