add containerPeople function

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "PORT=3406 react-scripts start",
+    "start": "PORT=2526 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -42,7 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {  
+  "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
@@ -60,6 +60,9 @@
     }
   },
   "lint-staged": {
-    "*.(js|jsx)": ["yarn lint:write", "git add"]
+    "*.(js|jsx)": [
+      "yarn lint:write",
+      "git add"
+    ]
   }
 }
